--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Minimyze</string>
+    <string name="app_name">Sonora</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -12,4 +12,7 @@
 
     <!-- Menu Strings -->
     <string name="sign_out">Sign Out</string>
+    <string name="recipes">Recipes and Menus</string>
+    <string name="shopping_lists">Shopping Lists</string>
+    <string name="help">Help</string>
 </resources>
