--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,15 +4,16 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
-
     <string name="title_activity_splashscreen">Splashscreen</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
 
     <!-- Menu Strings -->
     <string name="sign_out">Sign Out</string>
-    <string name="recipes">Recipes and Menus</string>
-    <string name="shopping_lists">Shopping Lists</string>
-    <string name="help">Help</string>
+    <string name="action_settings">Settings</string>
+
+    <!-- Tab Strings -->
+    <string name="home">Home</string>
+    <string name="profile">Profile</string>
+    <string name="my_shopping_lists">Shopping Lists</string>
 </resources>
