--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="sign_out">Sign Out</string>
     <string name="action_settings">Settings</string>
 
+    <string name="test">Did this show up?</string>
 </resources>
