--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <!-- Login Strings -->
     <string name="facebook_login">Facebook</string>
     <string name="google_login">Google</string>
+
+    <!-- Error strings -->
+    <string name="google_sign_in_error">Error signing in with Google</string>
 </resources>
