still working on profile fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,10 @@
     <!-- Menus Fragment Strings -->
     <string name="featured_menus">Featured Menus</string>
     <string name="my_menus">My Menus</string>
+
+    <!-- Profile Fragment Strings -->
+    <string name="recipes">recipes</string>
+    <string name="followers">followers</string>
+    <string name="following">following</string>
+    <string name="update_user_error">There was an error fetching recipes</string>
 </resources>
