--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <!-- Login Strings -->
     <string name="facebook_login">Facebook</string>
     <string name="google_login">Google</string>
+    <string name="auth_failure">Authentication failed</string>
+    <string name="json_error">Database encountered error</string>
 
     <!-- Error strings -->
     <string name="google_sign_in_error">Error signing in with Google</string>
