changed button bgs so they would have ripple effect

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
         <item>cup</item>
         <item>lb</item>
         <item>oz</item>
+        <item>piece</item>
         <item>pint</item>
         <item>quart</item>
         <item>tbsp</item>
