--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,12 +33,6 @@
     <string name="title_add_recipe_activity">Add Recipe</string>
     <string name="add_recipe_image">Add recipe image</string>
     <string name="recipe_name">Recipe name:</string>
-    <string name="ingredients">Ingredients:</string>
-    <string name="tags">Tags:</string>
-    <string name="instructions">Instructions:</string>
-    <string name="hint_name">Name</string>
-    <string name="hint_count">Count</string>
-    <string name="add_ingredient">Add Ingredient</string>
     <string name="add_instruction">Add Instruction</string>
     <string name="add_tag">Add Tag</string>
     <string name="button_submit">Submit</string>
@@ -56,5 +50,15 @@
         <item>tbsp</item>
         <item>tsp</item>
     </string-array>
+    <string-array name="recipe_components">
+        <item>Add Ingredients</item>
+        <item>Add Instructions</item>
+        <item>Add Tags</item>
+    </string-array>
+    <string name="recipe_component_image_desc">component icon</string>
 
+    <!-- Add Ingredient Strings -->
+    <string name="hint_name">Name</string>
+    <string name="hint_count">Count</string>
+    <string name="title_add_ingredients">Add Ingredients</string>
 </resources>
